Fixed query errors

--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,10 @@ Approve_appointment
 Profile_Default
 Patient_Login
 Service_From_Patients_interface
+
+IT HAS TO WITH appointment_serice table
+
+server = 	sql304.infinityfree.com
+username = if0_34737344
+password =  Denta1234
+database = if0_34737344_dental_clinic
